Fixed styling on word wraps

--- a/styles/style.less
+++ b/styles/style.less
@@ -26,3 +26,9 @@ pre {
 b.muted {
   color: #888;
 }
+
+.p-value {
+  word-wrap: break-word;
+  white-space: pre-wrap;
+  word-break: normal;
+}
